--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -10,9 +10,15 @@
     display: flex;
 }
 
+.logo-flex-container {
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
+}
+
 .logo {
     color: #fff; /* Logo text color */
-    padding: 20px 20px 19px 20px; /* Centers the logo */
+    padding-left: 20px;
     font-weight: bold;
     font-size: 18px; /* Logo text font size*/
     cursor: pointer;
